--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "axios": "^0.26.1",
     "express": "^4.17.3",
-    "multer": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.4"
   }
 }
